<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androclass="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="1"
        android:title="@string/menu_settings"/>
    <item
    android:id="@+id/red"
        android:orderInCategory="3"
        android:title="@string/red"/>
    <item
        android:id="@+id/blue"
        android:orderInCategory="4"
        android:title="@string/blue"/>
    <item
        android:id="@+id/home"
        android:orderInCategory="2"
        android:title="@string/home"/>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        support:showAsAction="ifRoom"/>
</menu>
